# pmx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ansible/: CLAUDE.md  ansible.cfg  requirements.yml
ansible/filter_plugins/: pmx_filters.py
ansible/group_vars/: all.yml  proxmox.yml
ansible/inventory/: proxmox.yml
ansible/playbooks/: _configure.yml  destroy.yml  provision.yml  reconfigure.yml  seed.yml
ansible/roles/ad_join_common/defaults/: main.yml
ansible/roles/ad_join_common/handlers/: main.yml
ansible/roles/ad_join_common/tasks/: apply.yml
ansible/state/: guests.jsonl
docs/: config-example.yml  extending-post-create.md
docs/design-plans/: 2026-04-17-pmx-provisioning.md
docs/implementation-plans/2026-04-18-pmx-provisioning/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md
docs/runbooks/: README.md  cephfs-client-wedged.md
docs/test-plans/: 2026-04-18-pmx-provisioning.md
pmx/: CLAUDE.md  ansible_runner.py  cli.py  config.py  credentials.py  destroy.py  preflight.py  reconfigure.py  seed.py  state.py  translate.py  verify.py
tests/: test_ansible_runner.py  test_cli.py  test_config.py  test_credentials.py  test_seed.py
tests/fixtures/: role_load_smoke.yml  sample_guests.jsonl
tests/integration/: test_ad_join.sh  test_create_lxc.sh  test_create_vm.sh  test_kitchen_sink.sh  test_lifecycle.sh  test_state_log.sh
tests/unit/: test_destroy.py  test_pmx_filters.py  test_preflight.py  test_reconfigure.py  test_state.py  test_verify.py
(+42 files in other folders)
