[project]
name = "pmx"
version = "0.1.0"
description = "Proxmox provisioning CLI"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3,<9",
    "ansible-core>=2.17,<2.19",
    "proxmoxer>=2.3,<3",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.scripts]
pmx = "pmx.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pmx"]

[tool.ruff]
line-length = 100
target-version = "py312"
